# 4ti2gap

./: .gitignore  COMO.txt  COPYING  Makefile  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  config.status  configure.ac  gap4ti2.la  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: 4ti2gap.aux  4ti2gap.blg  4ti2gap.idx  4ti2gap.ilg  4ti2gap.ind  4ti2gap.out  4ti2gap.tex  4ti2gap.toc  4ti2gap.xml
lib/: graver.gd  graver.gi  gravergmp.gd  gravergmp.gi  groebner.gd  groebner.gi  groebnergmp.gd  groebnergmp.gi  hilbert.gd  hilbert.gi  hilbertgmp.gd  hilbertgmp.gi  markov.gd  markov.gi  minimize.gd  minimize.gi  normalform.gd  normalform.gi  util.gd  util.gi  walk.gd  walk.gi  zbasis.gd  zbasis.gi  zsolve.gd  zsolve.gi  zsolvegmp.gd  zsolvegmp.gi
m4/: gmp-check.m4
src/: 4ti2daco.cc  4ti2daco.h  4ti2files.cc  4ti2files.h  4ti2gap.cc  4ti2gap.h  4ti2gapgmp.cc  4ti2gapgmp.h  4ti2groebner.cc  4ti2groebner.h  4ti2markov.cc  4ti2markov.h  4ti2minimize.cc  4ti2minimize.h  4ti2normalform.cc  4ti2normalform.h  4ti2walk.cc  4ti2walk.h  4ti2zbasis.cc  4ti2zbasis.h  4ti2zsolve.cc  4ti2zsolve.h  basicxch.cc  basicxch.h  gap4ti2.cc  gap4ti2.h  gap4ti2_la-gap4ti2.lo  pkgconfig.h
src/.deps/: gap4ti2_la-gap4ti2.Plo
tst/: graver.tst  groebner.tst  hilbert.tst  minimize.tst  normalform.tst  tap-driver.sh  testall.g  zsolve.tst
